--- a/package.json
+++ b/package.json
@@ -31,7 +31,11 @@
     "morgan": "^1.9.0"
   },
   "devDependencies": {
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-stage-0": "^6.24.1",
     "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-preset-react": "^6.24.1",
     "babel-preset-es2015": "^6.24.1",
     "gulp": "^3.9.1",
     "gulp-babel": "^7.0.0",
@@ -39,6 +43,9 @@
     "gulp-notify": "^3.2.0",
     "gulp-sass": "^3.1.0",
     "gulp-sourcemaps": "^2.6.3",
-    "gulp-uglify": "^3.0.0"
+    "gulp-uglify": "^3.0.0",
+    "webpack": "^3.10.0",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0"
   }
 }
